@@ -141,6 +141,17 @@
                   </div>
                 </div>
               </div>
+              <div class="row">
+                <div class="col-md-12">
+                  <div class="form-group">
+                    <label class="col-sm-4 control-label">{{form.redis_tls_profile.label}}</label>
+                    <div class="col-sm-5">
+                      {{form.redis_tls_profile}}
+                      {{form.redis_tls_profile.errors|safe}}
+                    </div>
+                  </div>
+                </div>
+              </div>
               <div class="row queue-mode">
                 <div class="col-md-12">
                   <div class="form-group">
